Fixes headshot alignment and font-sizing

--- a/source/scss/_tech.scss
+++ b/source/scss/_tech.scss
@@ -34,15 +34,15 @@
     }
     
     h1 {
-      font-size: calc(1vmax + 2vmin);
-      font-size: 2vmax;
+      font-size: calc(.25vw + .25vh + 1.75rem);
+      //font-size: 2vmax;
     }
     strong {
-      font-size: calc(1vmax + 3vmin);
+      font-size: calc(.25vw + .25vh + 2.75rem);
     }
     
     p {
-      font-size: calc(1vmax + 1vmin);
+      font-size: calc(.25vw + .25vh + 1rem);
       margin-bottom: 10px;
       
       &:last-child {
